<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_launcher_back_home"
        android:orderInCategory="100"
        android:title="@string/homeMenu"/>
    <item
        android:id="@+id/action_news"
        android:icon="@drawable/ic_launcher_latest_news"
        android:orderInCategory="101"
        android:title="@string/newsMenu"/>
    <item
        android:id="@+id/action_point_interest"
        android:icon="@drawable/ic_launcher_point_interest"
        android:orderInCategory="103"
        android:title="@string/pointMenu"/>
    <item
        android:id="@+id/action_accommondation"
        android:icon="@drawable/accomm"
        android:orderInCategory="104"
        android:title="@string/accommodationMenu"/>
    <item
        android:id="@+id/action_note"
        android:icon="@drawable/ic_launcher_local_info"
        android:orderInCategory="105"
        android:title="@string/note"/>
    <item
        android:id="@+id/action_currentlocation"
        android:title="@string/currentlocation">
    </item>

</menu>